--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
             <div class="col-md-7">
                 <h3>Featured Image</h3>
 
-                <img src="{{scuttlebutt.image}}" alt="featured image" style="width: 80%;">
+                <img src="{{scuttlebutt`.image}}" alt="featured image" style="width: 80%;">
 
             </div>
             <div class="col-md-5">
